@@ -1,3 +1,7 @@
+2016-06-14  c.hetherington  <cth@carlh.net>
+
+	* Select correct video frame type when importing DCPs (part of #806).
+
 2016-06-13  Carl Hetherington  <cth@carlh.net>
 
 	* Give better error messages when subtitles fail to load.
